--- a/index.html
+++ b/index.html
@@ -24,18 +24,28 @@
     <div id="chart-container"></div>
 
     <script>
-        function addChart() {
-            const tickerInput = document.getElementById('tickerInput').value;
-            if (tickerInput.trim() === '') {
+        async function addChart() {
+            const tickerInput = document.getElementById('tickerInput').value.trim();
+            if (tickerInput === '') {
                 alert('Please enter a valid stock ticker.');
                 return;
             }
 
-            const chartContainer = document.getElementById('chart-container');
-            const chartDiv = document.createElement('div');
-            chartDiv.classList.add('chart');
-            chartDiv.innerHTML = `<img src="https://example.com/chart?ticker=${tickerInput}" alt="Stock Chart for ${tickerInput}">`;
-            chartContainer.appendChild(chartDiv);
+            try {
+                const response = await fetch(`https://api.polygon.io/v1/meta/symbols/${tickerInput}/chart?apiKey=cdL83nFF2luLQJJFd0PeQzVgpvFwdays`);
+                if (!response.ok) {
+                    throw new Error('Failed to fetch chart data');
+                }
+                const data = await response.json();
+                const chartContainer = document.getElementById('chart-container');
+                const chartDiv = document.createElement('div');
+                chartDiv.classList.add('chart');
+                chartDiv.innerHTML = `<img src="${data.url}" alt="Stock Chart for ${tickerInput}">`;
+                chartContainer.appendChild(chartDiv);
+            } catch (error) {
+                console.error(error);
+                alert('Failed to fetch chart data. Please try again later.');
+            }
 
             document.getElementById('tickerInput').value = ''; // Clear input after adding chart
         }
